fix to bullet list alignment

--- a/slides/assets/custom.css
+++ b/slides/assets/custom.css
@@ -39,4 +39,4 @@ ul li li:before {
   color: #003F7F;
 }
 
-.motivator ul li { text-align:  left; }
+ul { text-align:  left; }
